istio/bird-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birdapp-v1
  labels:
    app: birdapp
    version: v1
spec:
  selector:
    matchLabels:
      app: birdapp
  template:
    metadata:
      labels:
        app: birdapp
        version: v1
    spec:
      containers:
      - name: birdapp
        image: nginx:1.14
        resources:
          limits:
            memory: "32Mi"
            cpu: "50m"
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birdapp-v2
  labels:
    app: birdapp
    version: v2
spec:
  selector:
    matchLabels:
      app: birdapp
  template:
    metadata:
      labels:
        app: birdapp
        version: v2
    spec:
      containers:
      - name: birdapp
        image: nginx
        resources:
          limits:
            memory: "32Mi"
            cpu: "50m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: birdapp-svc
spec:
  selector:
    app: birdapp
  ports:
  - port: 9000
    targetPort: 80
