istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: birdapp-route
spec:
  hosts:
  - bird.home.local
  gateways:
  - bird-gateway
  http:
  - match:
      - uri:
          prefix: /
    route:
    - destination:
        host: birdapp-svc.birdapp.svc.cluster.local
        port:
          number: 9000
